--- a/day12/band_clone.css
+++ b/day12/band_clone.css
@@ -213,29 +213,72 @@ select {
 .band_container {
     width: 100%;
     height: 700px;
-    background: #FCFCFC;
+    background: #F5F6F8;
+    display: flex;
+    justify-content: center;
 }
-.band_container > div > p {
+.band_box > div > p {
     display: flex;
     justify-content: space-between;
     font-size: 24px;
     align-items: center;
-    margin: 46px 0px 19px;
+    padding: 46px 0px 19px;
+    width: 1024px;
 }
 
-.band_container >div > p > a {
+.band_box >div > p > a {
     font-size: 14px;
     text-decoration: none;
     color: #222222;
 }
 
-.band_container > ul > li {
+.band_box > ul > li {
     display: flex;
 }
 
-.band_container > ul > li > img{
+.band_box > ul > li > img{
     width: 93px;
     height: 93px;
     overflow: hidden;
     border-radius: 15px;
+}
+
+.band_name_box {
+    align-items: start;
+    margin-left: 20px;
+}
+
+/* .band_name_box > h3 {
+    padding-top: 3px;
+} */
+
+.band_name_box > h3, p {
+    font-size: 14px;
+    padding: 2px 0;
+}
+
+.band_name_box > div > span {
+    font-size: 12px;
+    color: #777777;
+}
+
+.band_btn {
+    margin: 0;
+    margin-top: 5px;
+    padding: 3px 10px;
+    background-color: #ffffff;
+    border-radius: 50px;
+    border: 1px solid #ececec;
+}
+
+.band_btn > a {
+    color: #777777;
+    text-decoration: none;
+    font-size: 12px;
+}
+
+.band_btn > a > span {
+    font-weight: 900;
+    color: #222222;
+    font-size: 12px;
 }
