--- a/day12/band_clone.css
+++ b/day12/band_clone.css
@@ -20,6 +20,10 @@ h1 {
     height: 29px;
 }
 
+h1:hover {
+    cursor: pointer;
+}
+
 .right_box {
     display: flex;
 }
@@ -33,6 +37,12 @@ select {
     border: none;
     color: #666666;
     background-color: transparent;
+    outline: none;
+    cursor: pointer;
+}
+
+select:hover {
+    text-decoration: underline;
 }
 
 .sign_box{
@@ -52,6 +62,11 @@ select {
 .join_btn {
     background-color: transparent;
 }
+
+.join_btn:hover {
+    text-decoration: underline;
+}
+
 .join_btn > a {
     color: #333333;
 }
@@ -209,7 +224,7 @@ select {
 
 /* 밴드 설명 끝 */
 
-/* 다운로드 */
+/* 밴드 모음 */
 .band_container {
     width: 100%;
     height: 700px;
@@ -230,6 +245,11 @@ select {
     font-size: 14px;
     text-decoration: none;
     color: #222222;
+    padding-right: 15px;
+}
+
+.band_box > ul {
+    display: flex;
 }
 
 .band_box > ul > li {
@@ -248,9 +268,6 @@ select {
     margin-left: 20px;
 }
 
-/* .band_name_box > h3 {
-    padding-top: 3px;
-} */
 
 .band_name_box > h3, p {
     font-size: 14px;
@@ -281,4 +298,94 @@ select {
     font-weight: 900;
     color: #222222;
     font-size: 12px;
+}
+
+/* 다운로드 */
+.download_box {
+    display: flex;
+    justify-content: center;
+}
+
+.download_inside_box {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 1024px;
+    padding: 30px 0;
+}
+
+.band_down_box {
+    display: flex;
+    align-items: center;
+}
+
+.band_img {
+    display: inline-block;
+    background-image: url(./spr_intro.png);
+    width: 70px;
+    height: 70px;
+    background-position: -162px 0;
+    margin-right: 15px;
+}
+
+.down_text_box > h3 {
+    font-size: 23px;
+}
+
+.down_text_box > p {
+    font-size: 14px;
+}
+
+.google_play {
+    display: inline-block;
+    background-image: url(./spr_intro.png);
+    width: 160px;
+    height: 47px;
+}
+
+.app_store {
+    display: inline-block;
+    background-image: url(./spr_intro.png);
+    width: 160px;
+    height: 47px;
+    background-position: 0 -49px;
+}
+
+/* footer */
+footer {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 120px;
+    background-color: #2A3038;
+}
+
+.footer_box{
+    /* display: flex; */
+    /* justify-content: space-between; */
+    /* align-items: center; */
+    width: 1024px;
+    height: 120px;
+}
+
+.footer_menu {
+    display: flex;
+    list-style: none;
+}
+
+/* .information_text {
+    color: #a8a8a8;
+    font-weight: 900;
+} */
+
+.footer_menu > li > a {
+    text-decoration: none;
+    color: #888888;
+    font-size: 13px;
+}
+
+.footer_box > p {
+    font-weight: 900;
+    color: #b3b3b3;
+    font-size: 13px;
 }
